Fix z-index of focused inputs.
(#2377)

--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -2589,7 +2589,7 @@ fieldset.section > legend {
         input:focus,
         textarea:focus {
             position: relative;
-            z-index: 100;
+            z-index: 2;
         }
     }
 
